# envi2numpy

./: .gitignore  CMakeLists.txt  MANIFEST  README.md  cnpy.h  convert.cpp  envi_to_numpy.py  pythonwrapper.cpp  setup.py
envi2numpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: envi_parser.cpp  envi_parser.h  numpy_helpers.cpp  numpy_helpers.h  pythonwrapper.cpp
